--- a/requirements.txt
+++ b/requirements.txt
@@ -5,14 +5,17 @@ cffi==1.15.0
 charset-normalizer==2.0.12
 cryptography==36.0.1
 defusedxml==0.7.1
+dj-database-url==0.5.0
 Django==4.0.2
 django-allauth==0.49.0
 django-ckeditor==6.2.0
 django-js-asset==2.0.0
 djangorestframework==3.13.1
+gunicorn==20.1.0
 idna==3.3
 oauthlib==3.2.0
 Pillow==9.0.1
+psycopg2-binary==2.9.3
 pycparser==2.21
 PyJWT==2.3.0
 python-dotenv==0.19.2
@@ -22,3 +25,4 @@ requests==2.27.1
 requests-oauthlib==1.3.1
 sqlparse==0.4.2
 urllib3==1.26.8
+whitenoise==6.0.0
